fix image stretch

--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -38,9 +38,8 @@ header.site-header {
   .parallax-wrapper {
     overflow: hidden;
     position: absolute;
-    height: 100%;
-    width: auto;        /* scale width to keep ratio */
-    //height: 100vh;
+    width: 100%;
+    height: 100vh;
     //max-height: 1080px;
     top: 0;
     left: 0;
